// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SupervisorToolbar reducer snapshots dispatches MONITOR_INTERACTION_INITIALIZATION 1`] = `
Immutable.Map {
  "silentMonitoring": Immutable.Map {
    "status": "offline",
    "interactionId": "na",
  },
}
`;

exports[`SupervisorToolbar reducer snapshots dispatches REQUESTING_MONITOR_CALL 1`] = `
Immutable.Map {
  "silentMonitoring": Immutable.Map {
    "status": "connecting",
    "interactionId": undefined,
    "transitionCall": undefined,
  },
}
`;

exports[`SupervisorToolbar reducer snapshots dispatches TRANSITION_CALL_ENDING 1`] = `
Immutable.Map {
  "silentMonitoring": Immutable.Map {
    "status": "connected",
    "interactionId": "0000-0000-0000-0000",
    "transitionCall": false,
  },
  "muted": true,
}
`;

exports[`SupervisorToolbar reducer snapshots dispatches UPDATE_SUPERVISOR_TOOLBAR_STATE 1`] = `
Immutable.Map {
  "silentMonitoring": Immutable.Map {
    "status": "connected",
    "interactionId": "0000-0000-0000-0000",
  },
}
`;

exports[`SupervisorToolbar reducer snapshots dispatches cxengage/interactions/voice/mute-acknowledged 1`] = `
Immutable.Map {
  "muted": true,
}
`;

exports[`SupervisorToolbar reducer snapshots dispatches cxengage/interactions/voice/silent-monitor-end on a non transition call 1`] = `
Immutable.Map {
  "silentMonitoring": Immutable.Map {
    "status": "offline",
    "interactionId": "na",
    "transitionCall": false,
  },
}
`;

exports[`SupervisorToolbar reducer snapshots dispatches cxengage/interactions/voice/silent-monitor-end on a transition call 1`] = `
Immutable.Map {
  "silentMonitoring": Immutable.Map {
    "status": "connected",
    "interactionId": "0000-0000-0000-0000",
    "transitionCall": true,
  },
}
`;

exports[`SupervisorToolbar reducer snapshots dispatches cxengage/interactions/voice/silent-monitor-start 1`] = `
Immutable.Map {
  "silentMonitoring": Immutable.Map {
    "status": "connected",
  },
  "muted": true,
}
`;

exports[`SupervisorToolbar reducer snapshots dispatches cxengage/interactions/voice/unmute-acknowledged 1`] = `
Immutable.Map {
  "muted": false,
}
`;

exports[`SupervisorToolbar reducer snapshots dispatches cxengage/session/sqs-shut-down on a non transition call 1`] = `
Immutable.Map {
  "silentMonitoring": Immutable.Map {
    "status": "sqsShutDown",
    "interactionId": "0000-0000-0000-0000",
    "transitionCall": false,
  },
}
`;

exports[`SupervisorToolbar reducer snapshots dispatches cxengage/session/sqs-shut-down on a transition call 1`] = `
Immutable.Map {
  "silentMonitoring": Immutable.Map {
    "status": "sqsShutDown",
    "interactionId": "0000-0000-0000-0000",
    "transitionCall": true,
  },
}
`;

exports[`SupervisorToolbar reducer snapshots dispatches cxengage/session/started 1`] = `
Immutable.Map {
  "silentMonitoring": Immutable.Map {
    "status": "connected",
    "interactionId": "0000-0000-0000-0000",
    "transitionCall": false,
    "activeSession": true,
  },
}
`;

exports[`SupervisorToolbar reducer snapshots dispatches cxengage/twilio/device-ready 1`] = `
Immutable.Map {
  "twilio": Immutable.Map {
    "enabled": true,
  },
}
`;

exports[`SupervisorToolbar reducer snapshots dispatches monitorCall 1`] = `
Immutable.Map {
  "silentMonitoring": Immutable.Map {
    "status": "connecting",
    "interactionId": "0000-0000-0000-0000",
  },
}
`;

exports[`SupervisorToolbar reducer snapshots returns the correct initial state 1`] = `
Immutable.Map {
  "twilio": Immutable.Map {
    "enabled": false,
  },
  "silentMonitoring": Immutable.Map {
    "status": "offline",
    "interactionId": "na",
    "activeSession": false,
  },
  "muted": true,
}
`;
